@@ -1,0 +1,272 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u6771\u4eac\u842c\u8056\u7bc0\u65b0\u898f\u51fa\u7210\uff01\u6b4c\u821e\u4f0e\u753a\u3001\u6f80\u8c37\u56b4\u7981\u8857\u982d\u98f2\u9152\uff0c\u9055\u8005\u5c07\u88ab\u9a45\u6563", "description": "\u6771\u4eac\u842c\u8056\u7bc0\u65b0\u898f\u51fa\u7210\uff01\u6b4c\u821e\u4f0e\u753a\u3001\u6f80\u8c37\u56b4\u7981\u8857\u982d\u98f2\u9152\uff0c\u9055\u8005\u5c07\u88ab\u9a45\u6563", "url": "https://www.famechos.me/news/\u6771\u4eac\u842c\u8056\u7bc0\u65b0\u898f\u51fa\u7210\uff01\u6b4c\u821e\u4f0e\u753a\u3001\u6f80\u8c37\u56b4\u7981\u8857\u982d\u98f2\u9152\uff0c\u9055\u8005\u5c07\u88ab\u9a45\u6563.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-11T18:31:36.257490+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/東京萬聖節新規出爐！歌舞伎町、澀谷嚴禁街頭飲酒，違者將被驅散.html"/>
+<meta name="description" content="東京萬聖節新規出爐！歌舞伎町、澀谷嚴禁街頭飲酒，違者將被驅散。日本政府為防止萬聖節期間的亂象，推出新規定，嚴禁在歌舞伎町和澀谷地區街頭飲酒，違反者將被驅散。">
+
+<meta name="keywords" content="東京萬聖節，歌舞伎町，澀谷，街頭飲酒，新規定，驅散，日本萬聖節，萬聖節活動">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/東京萬聖節新規出爐！歌舞伎町、澀谷嚴禁街頭飲酒，違者將被驅散.html" />
+        <meta property="og:title" content="東京萬聖節新規出爐！歌舞伎町、澀谷嚴禁街頭飲酒，違者將被驅散" />
+        <meta property="og:description" content="東京萬聖節新規出爐！歌舞伎町、澀谷嚴禁街頭飲酒，違者將被驅散" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="東京萬聖節新規出爐！歌舞伎町、澀谷嚴禁街頭飲酒，違者將被驅散" />
+        <meta property="twitter:description" content="東京萬聖節新規出爐！歌舞伎町、澀谷嚴禁街頭飲酒，違者將被驅散" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>東京萬聖節新規出爐！歌舞伎町、澀谷嚴禁街頭飲酒，違者將被驅散</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">Others</p>
+          <p class="news-date">11/10/2024</p>
+        </div>
+	<p>東京的澀谷區和新宿區再次呼籲民眾在萬聖節期間避免前往該地區。這兩個地區在過去的萬聖節期間都經歷了大量遊客和垃圾問題，現在決定採取措施加以控制。</p>
+<h2>萬聖節新宿活動規則須知</h2>
+<p>新宿區的歌舞伎町地區將實施禁止在萬聖節期間在街上飲酒的條例。這項條例將於10月31日下午5點至11月1日凌晨5點期間在歌舞伎町1丁目和新宿3丁目部分地區實施，大約100名保安人員將負責執法。</p>
+<h2>萬聖節在澀谷：你需要知道的規則</h2>
+<p>澀谷區於10月1日通過了一項條例，禁止在夜間公共場所飲酒。除了這項禁令外，澀谷區還將在萬聖節期間實施特別安全措施，大約185名保安人員將於10月30日至31日晚上7點至凌晨5點期間在車站周圍巡邏。</p>
+<p>您可以期待以下活動：</p>
+<ul>
+<li>10月25日至26日和10月30日至31日的安全巡邏</li>
+</ul><h2>東京萬聖節規則</h2>
+<p>為了應對日益增加的“過度旅遊”問題，東京的澀谷區和新宿區實施了新的萬聖節規則。</p>
+<ul>
+<li>反垃圾措施</li>
+<li>關閉澀谷站的澀谷十字路口和宮益坂下公共吸煙區</li>
+<li>官員要求酒類商店在10月26日至31日晚上6點至凌晨5點期間停止銷售酒精飲料</li>
+</ul>
+<p>澀谷區還將於10月30日至31日封閉忠犬八公銅像。</p>
+<p>在澀谷和新宿，違反條例並不會受到法律懲罰，但酒精飲料可能會被沒收。聚集的人群可能會被驅散。如果您想享受一杯飲料，只需在室內的酒吧或餐廳享用即可。</p>
+<h2>長期之計：如何應對過度旅遊的挑戰</h2>
+<p>在東京萬聖節規則的新聞發布會上，澀谷區長長谷部健和新宿區長吉住健一都表示，對於日益增加的“過度旅遊”問題感到擔憂，這是實施新萬聖節規則的主要原因。</p>
+<h2>新措施落地歌舞伎町</h2>
+<p>澀谷區為了應對全年「過度旅遊」和節日人潮，實施了新的措施。</p>
+<ul>
+<li>在澀谷十字路口播放公共服務廣告，提醒人們不要在街上飲酒和吸煙</li>
+<li>張貼海報和播放視頻</li>
+<li>在購物街安裝安全攝像頭</li>
+</ul>
+<p>長谷部健表示，如果不採取進一步的中長期對策，「過度旅遊」和節日人潮的問題不會輕易解決。澀谷正在研究如何減少熱門旅遊景點的人潮，鼓勵人們訪問其他較少人知的地區，而不是集中在澀谷十字路口等地。</p>
+<p>請注意，資訊可能會有變動，我們盡力確保其正確性。</p>
+
+<p>資料來源：Tokyo Cheapo</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/cYpLW6ewDFM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/東京隱藏的寶藏！全女性演出「The Show」在神田明神震撼登場，帶你體驗傳統與現代的完美融合.html">東京隱藏的寶藏！全女性演出「The Show」在神田明神震撼登場，帶你體驗傳統與現代的完美融合</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
