@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 18:23:07 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 18:32:16 +0800</lastBuildDate>
 
   <item>
   <title>東京隱藏的寶藏！全女性演出「The Show」在神田明神震撼登場，帶你體驗傳統與現代的完美融合</title>
@@ -17,5 +17,15 @@
 我有幸親身體驗了「The Show」的全部內容，非常令人印象深刻。該演出提倡女性在劇場中的地位，無論是對於遊客還是當地人，都是一個值得觀看的演出。</description>
   <category>Others</category>
   <pubDate>Fri, 11 Oct 2024 18:23:07 +0800</pubDate>
+</item><item>
+  <title>東京隱藏的寶藏！全女性演出「The Show」在神田明神震撼登場，帶你體驗傳統與現代的完美融合</title>
+  <link>https://www.famechos.me/news/東京隱藏的寶藏！全女性演出「The Show」在神田明神震撼登場，帶你體驗傳統與現代的完美融合.html</link>
+  <description>東京萬聖節新規：歌舞伎町及澀谷呼籲民眾避免前往
+
+東京的澀谷區和新宿區再次呼籲民眾在萬聖節期間避免前往該地區。這兩個地區在過去的萬聖節期間都經歷了大量遊客和垃圾問題，現在決定採取措施加以控制。
+
+新宿萬聖節規則</description>
+  <category>Others</category>
+  <pubDate>Fri, 11 Oct 2024 18:32:16 +0800</pubDate>
 </item></channel>
 </rss>
