@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 18:28:36 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 18:32:16 +0800</lastBuildDate>
 
   <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
@@ -63,5 +63,15 @@
 ATEEZ最近發行了第四張日本單曲專輯《Birthday》，登上了Oricon的每日和每週單曲排行榜的第二和第三名。該專輯中與日本男團BE:FIRST合作的先行曲《Royal》曾登上每週數位單曲排行榜榜首。</description>
   <category>K-Pop</category>
   <pubDate>Fri, 11 Oct 2024 18:28:36 +0800</pubDate>
+</item><item>
+  <title>東京隱藏的寶藏！全女性演出「The Show」在神田明神震撼登場，帶你體驗傳統與現代的完美融合</title>
+  <link>https://www.famechos.me/news/東京隱藏的寶藏！全女性演出「The Show」在神田明神震撼登場，帶你體驗傳統與現代的完美融合.html</link>
+  <description>東京萬聖節新規：歌舞伎町及澀谷呼籲民眾避免前往
+
+東京的澀谷區和新宿區再次呼籲民眾在萬聖節期間避免前往該地區。這兩個地區在過去的萬聖節期間都經歷了大量遊客和垃圾問題，現在決定採取措施加以控制。
+
+新宿萬聖節規則</description>
+  <category>Others</category>
+  <pubDate>Fri, 11 Oct 2024 18:32:16 +0800</pubDate>
 </item></channel>
 </rss>
