@@ -240,4 +240,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/東京隱藏的寶藏！全女性演出「The Show」在神田明神震撼登場，帶你體驗傳統與現代的完美融合.html</ns0:loc>
+    <ns0:lastmod>2024-10-11T18:32:16+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
