@@ -7,3 +7,4 @@ https://www.koreaherald.com/view.php?ud=20241002050512
 https://www.koreaherald.com/view.php?ud=20241011050558
 https://www.koreaherald.com/view.php?ud=20241001050096
 https://tokyocheapo.com/entertainment/movies-theatre/kanda-myojin-show/
+https://www.koreaherald.com/view.php?ud=20241010050640
